work on web project

--- a/Web/MyRecipes.Web/Views/Home/Index.cshtml
+++ b/Web/MyRecipes.Web/Views/Home/Index.cshtml
@@ -5,6 +5,10 @@
     this.ViewData["Title"] = "Home Page";
 }
 
+@section Styles {
+    <link rel="stylesheet" href="~/css/highchartsDemo/index.css"/>
+}
+
 <div class="text-center">
     <h1 class="display-4">Welcome to @GlobalConstants.SystemName!</h1>
     <div class="col-md-4 offset-md-4">
