--- a/Web/MyRecipes.Web/Views/Recipes/Create.cshtml
+++ b/Web/MyRecipes.Web/Views/Recipes/Create.cshtml
@@ -5,7 +5,7 @@
     var categoryItems = Model.CategoriesItems.Select(x => new SelectListItem(x.Value, x.Key));
 }
 
-<form method="post" class="col-md-6 offset-md-3">
+<form method="post" class="col-md-6 offset-md-3" enctype="multipart/form-data">
     <h1>@this.ViewData["Title"]</h1>
     <div asp-validation-summary="All"></div>
     <div class="form-group">
@@ -38,6 +38,11 @@
         @*<vc:CategoriesDropdown name="CategoryId"></vc:CategoriesDropdown>*@
         <select asp-for="CategoryId" class="form-control" asp-items="categoryItems"></select>
         <span asp-validation-for="CategoryId" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Images"></label>
+        <input asp-for="Images" class="form-control" />
+        <span asp-validation-for="Images" class="text-danger"></span>
     </div>
     <div id="ingredientsContainer">
         <label asp-for="Ingredients"></label>
