--- a/Web/MyRecipes.Web/Views/Home/Index.cshtml
+++ b/Web/MyRecipes.Web/Views/Home/Index.cshtml
@@ -6,12 +6,27 @@
 }
 
 @section Styles {
-    <link rel="stylesheet" href="~/css/highchartsDemo/index.css"/>
+    <link rel="stylesheet" href="~/css/highchartsDemo/index.css" />
 }
 
-<div class="text-center">
+<div class="text-center row">
     <h1 class="display-4">Welcome to @GlobalConstants.SystemName!</h1>
-    <div class="col-md-4 offset-md-4">
+    <div class="col-md-8">
+        <div class="row">
+                @foreach (var recipe in Model.RandomRecipes)
+            {
+                <div class="card col-md-6" style="width: 18rem;">
+                    <img src="@recipe.ImageUrl" class="card-img-top" alt="@recipe.Name">
+                    <div class="card-body">
+                        <h5 class="card-title">@recipe.Name</h5>
+                        <p class="card-text">@recipe.CategoryName</p>
+                        <a asp-controller="Recipes" asp-action="ById" asp-route-id="@recipe.Id" class="btn btn-primary">Go to recipe</a>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
+    <div class="col-md-4">
         <p>We Have:</p>
         <ul class="list-group">
             <li class="list-group-item bg-info">Recipes: @Model.RecipesCount</li>
