--- a/Web/MyRecipes.Web/Views/Recipes/ById.cshtml
+++ b/Web/MyRecipes.Web/Views/Recipes/ById.cshtml
@@ -1,4 +1,5 @@
-﻿@using MyRecipes.Web.ViewModels.Recipes
+﻿@using MyRecipes.Common
+@using MyRecipes.Web.ViewModels.Recipes
 @model SingleRecipeViewModel
 @{
     this.ViewData["Title"] = Model.Name;
@@ -35,6 +36,12 @@
                         <li><span id="averageVoteValue">@Model.AverageVote.ToString("0.0")</span><span> / 5</span></li>
                     </ul>
                 </li>
+                @if (this.User.IsInRole(GlobalConstants.AdministratorRoleName))
+                {
+                    <li class="single-meta">
+                        <a asp-controller="Recipes" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-secondary">Edit</a>
+                    </li>
+                }
             </ul>
         </div>
     </div>
