--- a/Web/MyRecipes.Web/Views/Recipes/Edit.cshtml
+++ b/Web/MyRecipes.Web/Views/Recipes/Edit.cshtml
@@ -1,14 +1,12 @@
-﻿@using MyRecipes.Web.ViewModels.Recipes
-@model EditRecipeInputModel
+﻿@model MyRecipes.Web.ViewModels.Recipes.EditRecipeInputModel
 @{
-    this.ViewData["Title"] = "Edit recipe";
-    //var categories = new SelectList(Model.CategoriesItems);
+    ViewData["Title"] = "Edit recipe";
     var categoryItems = this.Model.CategoriesItems.Select(x => new SelectListItem(x.Value, x.Key));
 }
 
-<h1>@this.ViewData["Title"]</h1>
+<h1>@ViewData["Title"]</h1>
 
-<form method="post">
+<form method="post" id="editForm">
     <div class="form-group">
         <label asp-for="Name"></label>
         <input asp-for="Name" class="form-control" />
@@ -21,26 +19,51 @@
     </div>
     <div class="form-group">
         <label asp-for="CookingTime"></label>
-        <input asp-for="CookingTime" class="form-control"/>
+        <input asp-for="CookingTime" class="form-control" />
         <span asp-validation-for="CookingTime" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="PreparationTime"></label>
-        <input asp-for="PreparationTime" class="form-control"/>
+        <input asp-for="PreparationTime" class="form-control" />
         <span asp-validation-for="PreparationTime" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="PortionsCount"></label>
-        <input asp-for="PortionsCount" class="form-control"/>
+        <input asp-for="PortionsCount" class="form-control" />
         <span asp-validation-for="PortionsCount" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="CategoryId"></label>
         <select asp-for="CategoryId" asp-items="categoryItems" class="form-control"></select>
-        <span asp-validation-for="CategoryId"></span>
+        <span asp-validation-for="CategoryId" class="text-danger"></span>
     </div>
     <hr />
     <input type="hidden" asp-for="Id" />
-    <input type="submit" class="btn btn-success" value="Save changes" />
 </form>
 
+<button type="submit" class="btn btn-success" data-toggle="modal" data-target="#modalEdit">Save changes</button>
+
+
+
+<!-- Modal -->
+<div class="modal" id="modalEdit" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Confirm edit</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>
+                    Do you confirm this changes?
+                </p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" onclick="editForm.submit()">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
