--- a/Web/MyRecipes.Web/Views/Recipes/Edit.cshtml
+++ b/Web/MyRecipes.Web/Views/Recipes/Edit.cshtml
@@ -7,6 +7,7 @@
 <h1>@ViewData["Title"]</h1>
 
 <form method="post" id="editForm">
+    <div asp-validation-summary="All"></div>
     <div class="form-group">
         <label asp-for="Name"></label>
         <input asp-for="Name" class="form-control" />
@@ -41,29 +42,24 @@
     <input type="hidden" asp-for="Id" />
 </form>
 
-<button type="submit" class="btn btn-success" data-toggle="modal" data-target="#modalEdit">Save changes</button>
+<button type="submit" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editModal">
+  Save changes
+</button>
 
-
-
-<!-- Modal -->
-<div class="modal" id="modalEdit" tabindex="-1" role="dialog">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Confirm edit</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <p>
-                    Do you confirm this changes?
-                </p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" onclick="editForm.submit()">Save changes</button>
-            </div>
-        </div>
+<div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Confirm edit</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Do you confirm these changes?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" onclick="editForm.submit()">Save changes</button>
+      </div>
     </div>
+  </div>
 </div>
