--- a/Web/MyRecipes.Web/Views/SearchRecipes/List.cshtml
+++ b/Web/MyRecipes.Web/Views/SearchRecipes/List.cshtml
@@ -6,18 +6,25 @@
 
 <h1>@this.ViewData["Title"]</h1>
 
-<div class="row">
-   <div class="row">
-          @foreach (var recipe in this.Model.Recipes)
-        {
-            <div class="card col-md-3">
-                <img src="@recipe.ImageUrl" class="card-img-top" alt="@recipe.Name">
-                <div class="card-body">
-                    <h5 class="card-title">@recipe.Name</h5>
-                    <p class="card-text">@recipe.CategoryName</p>
-                    <a asp-controller="Recipes" asp-action="ById" asp-route-id="@recipe.Id" class="btn btn-primary">Go to recipe</a>
+@if (!this.Model.Recipes.Any())
+{
+    <p class="alert alert-danger">Nothing found.</p>
+}
+else
+{
+    <div class="row">
+        <div class="row">
+            @foreach (var recipe in this.Model.Recipes)
+            {
+                <div class="card col-md-3">
+                    <img src="@recipe.ImageUrl" class="card-img-top" alt="@recipe.Name">
+                    <div class="card-body">
+                        <h5 class="card-title">@recipe.Name</h5>
+                        <p class="card-text">@recipe.CategoryName</p>
+                        <a asp-controller="Recipes" asp-action="ById" asp-route-id="@recipe.Id" class="btn btn-primary">Go to recipe</a>
+                    </div>
                 </div>
-            </div>
-        }
+            }
+        </div>
     </div>
-</div>       
+}
