--- a/Web/MyRecipes.Web/Views/Recipes/All.cshtml
+++ b/Web/MyRecipes.Web/Views/Recipes/All.cshtml
@@ -9,6 +9,11 @@
     <div class="alert alert-success">@this.TempData["Message"]</div>
 }
 
+@if (this.TempData.ContainsKey("DeleteMessage"))
+{
+    <div class="alert alert-success">@this.TempData["DeleteMessage"]</div>
+}
+
 <h1>@this.ViewData["Title"]</h1>
 <hr />
 <div class="row">
