--- a/Web/MyRecipes.Web/Views/Recipes/ById.cshtml
+++ b/Web/MyRecipes.Web/Views/Recipes/ById.cshtml
@@ -47,23 +47,14 @@
                         <button type="submit" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal">
                             Delete
                         </button>
-                        <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">Delete recipe</h5>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                    </div>
-                                    <div class="modal-body">
-                                        Are you sure you want to delete "@Model.Name"?
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-primary" onclick="deleteForm.submit()">Sure</button>
-                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                    </li>
+                    <li class="single-meta">
+                        <form asp-action="SendToEmail" asp-route-id="@Model.Id" method="post">
+                            <button type="submit" class="btn btn-warning">Send to my email</button>
+                        </form>
+                    </li>
+                     <li class="single-meta">
+                        <button type="submit" class="btn btn-warning" onclick="window.print()">Print</button>
                     </li>
                 }
             </ul>
@@ -184,3 +175,21 @@
         });
     </script>
 }
+
+    <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Delete recipe</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Are you sure you want to delete "@Model.Name"?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" onclick="deleteForm.submit()">Sure</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
+                </div>
+            </div>
+        </div>
+    </div>
