--- a/Web/MyRecipes.Web/wwwroot/css/style.css
+++ b/Web/MyRecipes.Web/wwwroot/css/style.css
@@ -1,33 +1,4 @@
-﻿Skip to content
-Search or jump to…
-Pull requests
-Issues
-Marketplace
-Explore
-
-@yana-07
-SoftUni
-/
-csharp-web
-Public
-Code
-Issues
-1
-Pull requests
-6
-Actions
-Projects
-Wiki
-Security
-Insights
-csharp-web/2020-Sept-Season/MoiteRecepti/Web/MoiteRecepti.Web/wwwroot/css/style.css
-@NikolayIT
-NikolayIT Implement recipe page with AJAX voting
-Latest commit 0aa9c58 on Nov 20, 2020
-History
-1 contributor
-11847 lines (10016 sloc) 258 KB
-/*---------------------------------------------
+﻿/*---------------------------------------------
 =========================================================================  
 [Table of contents]
 =========================================================================
